# web-to-sheets

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  dedupe.db  pyproject.toml  quotes.csv  requirements.txt
.github/workflows/: ci.yml  demo.yml
docs/: architecture.md  demo.md  install.md  ops.md  portfolio-notes.md  portfolio.md
scripts/: bootstrap.sh  fresh_run.sh  run_demo.sh
sites/: quotes.yaml  sample.yaml
src/: __init__.py  cli.py
src/core/: auth.py  config.py  database.py  logger.py  processor.py  scraper.py  sheets.py
src/qa/: validator.py
tests/: test_cli.py  test_demo_mode.py  test_processor.py  test_scraper.py  test_sheets.py  test_validator.py
